--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ anyio==4.8.0
 click==8.1.8
 colorama==0.4.6
 dnspython==2.7.0
-email_validator==2.2.0
+email-validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.6
 h11==0.14.0
