--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,8 @@ pymongo==3.11.0
 certifi
 faiss-cpu
 sentence-transformers
-langchain
-langchain-community
+langchain>=0.1.14
+langchain-community>=0.0.24
 google-generativeai
 langchain-google-genai
 langgraph
